--- a/src/dotnetstarter/wwwroot/index.html
+++ b/src/dotnetstarter/wwwroot/index.html
@@ -13,7 +13,7 @@
                     <img class="newappIcon" src="images/newapp-icon.png">
                 </td>
                 <td>
-                    <h1 id="message">Hello World</h1>
+                    <h1 id="message">Hello Tân</h1>
                     <p class='description'></p> Thank you for creating a <span class="blue">
                         ASP.NET
                         Starter Application
