--- a/src/dotnetstarter/wwwroot/index.html
+++ b/src/dotnetstarter/wwwroot/index.html
@@ -10,7 +10,7 @@
         <table>
             <tr>
                 <td style='width: 30%;'>
-                    <img class="newappIcon" src="images/newapp-icon.png">
+                    <img class="newappIcon" src="http://cdn2.thenhan.com/images/newapp-icon.png">
                 </td>
                 <td>
                     <h1 id="message">Hello Tân</h1>
